--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,12 +8,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/static/icon-192.png",
+      "src": "/static/isbn192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/static/icon-512.png",
+      "src": "/static/isbn512png",
       "sizes": "512x512",
       "type": "image/png"
     }
