WIP: 一時コミット（rebase用）

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 NOTION_TOKEN=ntn_b51116345813OlPKYHeEPcdQsMLMEx9eyzJuq0PTCSqfCU
 NOTION_DB=20b130ad5a95803fb9dece0a0828b765
-GOOGLE_API_KEY=AIzaSyD88LWMI2q7pyGesmoQ9FcqMxB3vEGH7O
+GOOGLE_API_KEY=AIzaSyD88LWMI2q7pyGesmoQ9FcqMxB3vEGH7O4
+CLOUDINARY_CLOUD_NAME=dlrjtv6cl 
+CLOUDINARY_API_KEY=584381835931537 
+CLOUDINARY_API_SECRET=buk7Xjyq5WMkhMzUVAswfrjqvec
+CLOUDINARY_URL=cloudinary://584381835931537:buk7Xjyq5WMkhMzUVAswfrjqvec@dlrjtv6cl
+RAKUTEN_APP_ID=e06e2a5afcf14b52139c1fb6c58e9dbc
