--- a/app/static/manifest.json
+++ b/app/static/manifest.json
@@ -3,7 +3,18 @@
   "short_name": "BookScan",
   "start_url": "/scan",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "icons": []
+  "background_color": "#F7F3EE",
+  "theme_color": "#524A45",
+  "icons": [ 
+    {
+      "src": "/static/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
