--- a/app/static/manifest.json
+++ b/app/static/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "Inkline",
-  "short_name": "BookScan",
+  "short_name": "Inkline",
   "start_url": "/scan",
   "display": "standalone",
   "background_color": "#F7F3EE",
   "theme_color": "#524A45",
   "icons": [ 
     {
-      "src": "/static/icon-192.png",
+      "src": "/static/ISBN192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/static/icon-512.png",
+      "src": "/static/ISBN512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
