--- a/app/static/manifest.json
+++ b/app/static/manifest.json
@@ -12,7 +12,7 @@
       "type": "image/png"
     },
     {
-      "src": "/static/ISBN512.png",
+      "src": "/static/isbn512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
