--- a/app/static/manifest.json
+++ b/app/static/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Inkline",
   "short_name": "Inkline",
-  "start_url": "/scan",
+  "start_url": "/login",
   "display": "standalone",
   "background_color": "#F7F3EE",
   "theme_color": "#524A45",
